# compileus

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  buildenv.Dockerfile
.devcontainer/: devcontainer.json
apps/compileus/: CMakeLists.txt  README.md
apps/compileus/src/: main.cpp
apps/talkc/: CMakeLists.txt
apps/talkc/include/talkc_app/: context.h  entry.h
apps/talkc/src/talkc_app/: compile.cpp  entry.cpp  options.cpp
libs/: CMakeLists.txt
libs/libcore/: CMakeLists.txt
libs/libcore/include/compileus/libcore/: environment.h
libs/libcore/src/: environment.cpp
libs/libtalk/: CMakeLists.txt
libs/libtalk/include/compileus/libtalk/: ast.h  char_id.h  lexer.h  parser.h  utils.h
libs/libtalk/src/: ast.cpp  char_id.cpp  char_id.tlk  lexer.cpp  parser.cpp  utils.cpp
libs/libtalk/tests/: CMakeLists.txt  expr_parser_test.cpp  lexer_tests.cpp
scripts/: README.md  build_dependencies.sh  format_all.sh
